force-app/main/default/objects/sked_Future_Call_Post_Commit_Event__e/sked_Future_Call_Post_Commit_Event__e.object-meta.xml
<CustomObject>
    <label>Future Call Post Commit Event</label>
    <pluralLabel>Future Call Post Commit Events</pluralLabel>
</CustomObject>