force-app/main/default/objects/sked_Future_Call_Post_Commit_Event__e/fields/sked_Method_Name__c.field-meta.xml
<CustomField>
    <fullName>sked_Method_Name__c</fullName>
    <label>Method Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>