force-app/main/default/objects/sked_Future_Call_Post_Commit_Event__e/fields/sked_Parameter_1_Data__c.field-meta.xml
<CustomField>
    <fullName>sked_Parameter_1_Data__c</fullName>
    <label>Parameter 1 Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>